Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- CPSRevisionWidget to only display the revision of a proxy
- added auto_strip feature to the CPSLinesWidget
Bug fixes:
~~~~~~~~~~
- Generic MultiSelect Widget will validate if the selection is empty and the 
  widget is not required, or is required and accepting blank values;
- Allowed Select widgets to sort the entries (missing import)
- new widget: Email List Widget that combines Email and Lines widgets
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- All fields get a new method _getAllDependantFieldIds
- removed some zLOG deprecation warnings
- made the CPSEmailWidget able to support addresses of the form
  "Firstname Lastname <fl@fakeemail.com>"